--- a/BhpDocsBuilder/template/template.html
+++ b/BhpDocsBuilder/template/template.html
@@ -101,7 +101,7 @@
                 <li><a href="https://github.com/bhpAlpha/docs/issues" title="Issue" target="_blank">Issue</a></li>
                 <li><a href="https://discord.io/bhp" title="Discord" target="_blank">Discord</a></li>
             </ul>
-            <p>Build by <a href="https://github.com/chenzhitong/BhppDocsBuilder" title="BhppDocsBuilder" target="_blank">BhppDocsBuilder</a></p>
+            <p>Build by <a href="https://github.com/chenzhitong/BhpDocsBuilder" title="BhpDocsBuilder" target="_blank">BhpDocsBuilder</a></p>
             <p>Licensed under <a href="https://github.com/bhpAlpha/docs/blob/master/LICENSE" title="CC-BY-4.0" target="_blank">CC-BY-4.0</a> license. </p>
         </div>
     </footer>
