--- a/BhpDocsBuilder/template/tutorial/index.html
+++ b/BhpDocsBuilder/template/tutorial/index.html
@@ -7,7 +7,7 @@
     <title> </title>
     <meta name="viewport" content="width=device-width">
     <meta name="title" content="">
-    <meta name="generator" content="BhppDocsBuilder">
+    <meta name="generator" content="BhpDocsBuilder">
 </head>
 
 <body>
