--- a/BhpDocsBuilder/template/template.html
+++ b/BhpDocsBuilder/template/template.html
@@ -36,8 +36,8 @@
 <body data-spy="scroll" data-target="#navbar-sidenav">
     <nav class="navbar fixed-top navbar-expand-lg py-1 px-3 px-sm-4 px-md-5">
         <a class="navbar-brand" href="https://bhpa.io">
-            <img class="logo" src="/img/logo.svg" alt="BHP Logo" />
-            <img class="logo-dark" src="/img/logo-dark.svg" alt="BHP Logo" />
+            <img class="logo" src="/img/logo.png" alt="BHP Logo" />
+            <img class="logo-dark" src="/img/logo-dark.png" alt="BHP Logo" />
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
