update main color

--- a/BhpDocsBuilder/template/css/site.less
+++ b/BhpDocsBuilder/template/css/site.less
@@ -1,4 +1,4 @@
-﻿@light-link: #00af92;
+﻿@light-link: #3368ff;
 @light-link-hover: darken(@light-link, 20%);
 @light-text: #333;
 @light-background: #fff;
