--- a/BhpDocsBuilder/template/css/site.css
+++ b/BhpDocsBuilder/template/css/site.css
@@ -14,7 +14,7 @@ body {
 a {
     text-decoration: none;
     background-color: transparent;
-    color: #00af92;
+    color: #3368ff;
 }
 
     a:hover {
@@ -70,7 +70,7 @@ footer > div {
 
     .navbar-nav .nav-link.active {
         color: rgba(0, 0, 0, 0.9);
-        border-bottom: 1px solid #00af92;
+        border-bottom: 1px solid #3368ff;
     }
 
 .catalog {
@@ -203,7 +203,7 @@ main {
         padding-left: 0.8rem;
         color: #333;
         background-color: #f0f0f0;
-        border-left: 0.2rem solid #00af92;
+        border-left: 0.2rem solid #3368ff;
     }
 
     .side-nav nav {
@@ -239,14 +239,14 @@ main {
         .catalog a.active,
         .catalog span:hover,
         .side-nav a:not(.contribution-link):hover {
-            color: #00af92;
+            color: #3368ff;
             background-color: #f0f0f0;
         }
 
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
     color: #fff;
-    background-color: #00af92;
+    background-color: #3368ff;
 }
 
 footer {
@@ -287,7 +287,7 @@ footer {
     }
 
     footer a {
-        color: #00af92;
+        color: #3368ff;
         text-decoration: none;
     }
 
@@ -386,7 +386,7 @@ li {
         margin-right: 0.5em;
         display: inline;
         font-size: 1rem;
-        color: #00af92;
+        color: #3368ff;
     }
 
 h1,
@@ -512,7 +512,7 @@ h6 {
     .btn-clipboard:hover,
     .btn-clipboard:focus:hover {
         color: #fff;
-        background-color: #00af92;
+        background-color: #3368ff;
     }
 
 .lightbulb {
@@ -644,7 +644,7 @@ h6 {
     }
 
     .search-bar .search-de {
-        color: #00af92;
+        color: #3368ff;
         position: absolute;
         right: 15px;
         padding: 4px 8px;
@@ -659,12 +659,12 @@ h6 {
     .search-bar #sInput {
         width: calc(100% - 10px);
         padding-left: 10px;
-        border: 1px solid #00af92;
+        border: 1px solid #3368ff;
         padding: 5px 8px;
     }
 
         .search-bar #sInput:focus {
-            box-shadow: 0 0 3px #00af92;
+            box-shadow: 0 0 3px #3368ff;
             outline: none;
         }
 
@@ -703,14 +703,14 @@ h6 {
                 }
 
                     .search-bar .search-re ul > li a:hover {
-                        color: #00af92 !important;
+                        color: #3368ff !important;
                     }
 
                 .search-bar .search-re ul > li strong {
                     display: inline-block;
                     padding-top: 5px;
                     font-size: 1.1rem;
-                    color: #00af92;
+                    color: #3368ff;
                     white-space: nowrap;
                     overflow: hidden;
                     text-overflow: ellipsis;
