hide top and bottom links

--- a/BhpDocsBuilder/template/template.html
+++ b/BhpDocsBuilder/template/template.html
@@ -47,7 +47,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/docs/index.html">Documentation</a>
                 </li>
-                <li class="nav-item">
+                <!--<li class="nav-item">
                     <a class="nav-link" href="/tutorial/index.html">Tutorial</a>
                 </li>
                 <li class="nav-item">
@@ -55,7 +55,7 @@
                 </li>
                 <li class="nav-item" style="margin-right: 100px">
                     <a class="nav-link" href="/articles/index.html">Articles</a>
-                </li>
+                </li>-->
                 <li class="nav-item">
                     <a class="nav-link d-inline-block" href="javascript:" onclick="language('en-us')">EN</a>|<a class="nav-link d-inline-block" href="javascript:" onclick="language('zh-cn')">中文</a>
                 </li>
@@ -98,8 +98,6 @@
         <div class="d-flex justify-content-between py-1 px-3 px-sm-4 px-md-5">
             <ul class="d-none d-md-block">
                 <li><a href="https://github.com/bhpAlpha/docs" title="GitHub" target="_blank">GitHub</a></li>
-                <li><a href="https://github.com/bhpAlpha/docs/issues" title="Issue" target="_blank">Issue</a></li>
-                <li><a href="https://discord.io/bhp" title="Discord" target="_blank">Discord</a></li>
             </ul>            
             <p>Licensed under <a href="https://github.com/bhpAlpha/docs/blob/master/LICENSE" title="CC-BY-4.0" target="_blank">CC-BY-4.0</a> license. </p>
         </div>
