--- a/BhpDocsBuilder/template/index.html
+++ b/BhpDocsBuilder/template/index.html
@@ -12,10 +12,11 @@
 
 <body>
     <script>
-        var savelang = localStorage.getItem("lang");
-        var lang = !!savelang ? savelang : (navigator.language || navigator.browserLanguage).toLowerCase();
-        if (lang != 'zh-cn') lang = 'en-us';
-        location.href = "/docs/" + lang + "/index.html";
+        //var savelang = localStorage.getItem("lang");
+        //var lang = !!savelang ? savelang : (navigator.language || navigator.browserLanguage).toLowerCase();
+        //if (lang != 'zh-cn') lang = 'en-us';
+        //location.href = "/docs/" + lang + "/index.html";
+        location.href = "/docs/zh-cn/index.html";
     </script>
 </body>
 
