--- a/BhpDocsBuilder/template/index.html
+++ b/BhpDocsBuilder/template/index.html
@@ -16,6 +16,7 @@
         //var lang = !!savelang ? savelang : (navigator.language || navigator.browserLanguage).toLowerCase();
         //if (lang != 'zh-cn') lang = 'en-us';
         //location.href = "/docs/" + lang + "/index.html";
+        localStorage.setItem("lang", "zh-cn");
         location.href = "/docs/zh-cn/index.html";
     </script>
 </body>
